--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   equatable: ^2.0.5
   go_router: ^6.5.6
   get_it: ^7.2.0
+  fl_three_state_switch: ^0.0.1
 
 dev_dependencies:
   flutter_test:
